<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_bottom_categories"
        android:enabled="true"
        android:icon="@drawable/ic_note_category"
        android:title="@string/category_notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_note"
        android:title="@string/search_notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_add"
        android:enabled="true"
        android:icon="@drawable/ic_add_note"
        android:title="@string/add_notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favourite_note"
        android:title="@string/favourite_notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_sort"
        android:enabled="true"
        android:icon="@drawable/ic_sort_note"
        android:title="@string/sort_notes"
        app:showAsAction="ifRoom" />
</menu>